Fixes in GameServiceTest.java and changement in the InputHandler.java